2008-04-10  Andy Wingo  <wingo@unquote>

	* == Released guile-gnome-platform version 2.15.97 ==

2008-04-10  Andy Wingo  <wingo@unquote>

	* NEWS: Update NEWS.

2007-12-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.96 ==

2007-12-06  Andy Wingo  <wingo@pobox.com>

	* tests/wrapset.api: Regenerated.

	* doc/defuns-*.texi: Regenerated.

	* doc/guile-gnome-libgnome.texi (Top): 
	* doc/undocumented.texi: New section for undocumented exports.
	
2007-11-30  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/libgnome-spec.scm (client-global-declarations-cg):
	Don't add gnome-support.h to client decls.

	* gnome/overrides/libgnome.defs: Ignore some more functions.

	* doc/guile-gnome-libgnome.texi (Top): Type and function index.

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.95 ==

2007-11-10  Andy Wingo  <wingo@pobox.com>

	* tests/Makefile.am:
	* tests/wrapset.api:
	* tests/wrapset.scm: Add API regression test suite.

2007-11-01  Andy Wingo  <wingo@pobox.com>

	* Makefile.am:
	* doc/: Add documentation, generated from upstream gtk-doc.

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.94 ==

2007-09-25  Andy Wingo  <wingo@pobox.com>

	* NEWS: Updated.

2007-06-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.93 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.92 ==

2007-05-24  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/libgnome-spec.scm (initialize): Load libgnome.defs.

	* gnome/overrides/Makefile.am (module_DATA): 
	* gnome/overrides/libgnome.defs: Renamed from gnome.defs. Update
	to deal with new generated libgnome.defs for libgnome 2.16.

2007-05-10  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.91 ==

2006-12-15  Andy Wingo  <wingo@pobox.com>

	* == Released guile-gnome-platform version 2.15.90 ==
